@@ -48,7 +48,7 @@ GdkPixbuf *
 get_icon_by_id         (IconID icon_id);
 
 void
-init_icons             (GladeXML *glade_xml);
+init_icons             (void);
 
 void
 deinit_icons           (void);
